--- a/src/main/webapp/script/agenda.xhtml
+++ b/src/main/webapp/script/agenda.xhtml
@@ -5,9 +5,7 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:pe="http://primefaces.org/ui/extensions"
-      xmlns:pm="http://primefaces.org/mobile"
-      xmlns:itcs="http://java.sun.com/jsf/composite/components/filterView">
+      xmlns:pe="http://primefaces.org/ui/extensions">
 
     <ui:composition template="/script/template_inbox.xhtml">
         <ui:define name="title">
