nueva inscripcion a eventos muchos bug fixed

--- a/src/main/webapp/script/agenda.xhtml
+++ b/src/main/webapp/script/agenda.xhtml
@@ -500,7 +500,7 @@
 
                                 <p:message for="accionAutomaticaBool"/>
 
-                                <p:panel id="action">
+                                <p:panel id="action" visible="#{globalScheduleController.event.data.executeAction}">
                                     <p:panelGrid>
 
                                         <p:row rendered="#{globalScheduleController.event.data.executeAction}">
