--- a/src/main/webapp/script/login.xhtml
+++ b/src/main/webapp/script/login.xhtml
@@ -42,6 +42,7 @@
 
                     <h1 class="text-center login-title">#{bundle.LoginTitle}</h1>
                     <div class="account-wall">
+                        <p:graphicImage styleClass="profile-img" library="images" name="avatar_2x.png" />
 
                         <!--div align="center">
                             <p:graphicImage library="images" name="ITCSHelpdesk105x105.png" width="100" height="100"/>
