--- a/src/main/webapp/resources/ezcomp/panelClientesInvitados.xhtml
+++ b/src/main/webapp/resources/ezcomp/panelClientesInvitados.xhtml
@@ -9,7 +9,7 @@
 
     <!-- INTERFACE -->
     <cc:interface>
-            <cc:attribute name="update" default=":mainform:messages" />
+        <cc:attribute name="update" default=":mainform:messages" />
     </cc:interface>
 
     <!-- IMPLEMENTATION -->
@@ -52,9 +52,11 @@
                          paginatorAlwaysVisible="false"
                          paginatorPosition="bottom">
 
-
-                <p:column>
-                    <i class="fa fa-user">&nbsp;<h:outputText id="userLink" value="#{clientInvited.cliente.capitalName}" />  </i> 
+                <p:column exportable="false">
+                    <i class="fa fa-user"></i>
+                </p:column>
+                <p:column headerText="Nombre">
+                    <h:outputText id="userLink" value="#{clientInvited.cliente.capitalName}" />  
                     <p:tooltip for="userLink" >
                         <h:panelGrid  columns="2" cellpadding="5">  
                             <f:facet name="header">  
@@ -73,28 +75,17 @@
                                 <h:outputText value=" / #{clientInvited.cliente.fono2}" rendered="#{clientInvited.cliente.fono2 ne null}"/> 
                             </h:panelGroup>
 
-                            <h:outputText value="Asistencia: " style="font-weight: bold;"/>  
-                            <pe:switch value="#{clientInvited.willAssist}">  
-                                <pe:defaultCase>
-                                    <i class="fa fa-question-circle" title="Pendiente de confirmar">&nbsp;Pendiente de confirmar</i>
-                                </pe:defaultCase>
-                                <pe:case value="true">  
-                                    <i class="fa fa-check-circle" title="Asistencia confirmada">&nbsp;Asistencia confirmada</i>
-                                </pe:case> 
-                                <pe:case value="false">  
-                                    <i class="fa fa-times-circle" title="No asistirá">&nbsp;No asistirá</i>
-                                </pe:case>  
-                            </pe:switch>
+
                         </h:panelGrid>  
                     </p:tooltip>
                 </p:column>
-                <p:column>
+                <p:column headerText="Asistencia">
                     <pe:triStateCheckbox value="#{clientInvited.willAssist}"
                                          stateOneTitle="Pendiente"
                                          stateTwoIcon="ui-icon-check" stateTwoTitle="Asistencia confirmada"
                                          stateThreeIcon="ui-icon-close" stateThreeTitle="No asistirá"/>  
                 </p:column>
-                <p:column>
+                <p:column exportable="false">
                     <p:commandLink update="clientesInvitadosList" 
                                    title="Remover Cliente" styleClass="fa fa-times" style="color: #ff0000;">
                         <p:collector unique="true" value="#{clientInvited}" 
@@ -102,6 +93,27 @@
                     </p:commandLink> 
                 </p:column>
             </p:dataTable>
+            <p:separator/>
+                <p:outputPanel rendered="#{not empty casoScheduleController.event.data.scheduleEventClientList}">
+                     <h:commandLink id="xls">
+                        <p:graphicImage value="/resources/file_extension_icons/file_extension_xlsx.png" />
+                        <p:dataExporter type="xls" target="clientesInvitadosList" fileName="clientesInvitadosList" />
+                    </h:commandLink>
+                    <p:tooltip for="xls" value="exportar a excel. Nota Pendiente=0, Asiste=1, No asiste=2"/>
+                    &nbsp;
+                    <h:commandLink id="csv">
+                        <p:graphicImage value="/resources/file_extension_icons/file_extension_csv.png" />
+                        <p:dataExporter type="csv" target="clientesInvitadosList" fileName="clientesInvitadosList" />
+                    </h:commandLink>
+                    <p:tooltip for="csv" value="exportar a csv. Nota Pendiente=0, Asiste=1, No asiste=2"/>
+                    &nbsp;
+                    <h:commandLink id="xml">
+                        <p:graphicImage value="/resources/file_extension_icons/file_extension_xml.png" />
+                        <p:dataExporter type="xml" target="clientesInvitadosList" fileName="clientesInvitadosList" />
+                    </h:commandLink>
+                    <p:tooltip for="xml" value="exportar a Xml. Nota Pendiente=0, Asiste=1, No asiste=2"/>
+                </p:outputPanel> 
+               
         </p:panel>
     </cc:implementation>
 </html>
