--- a/src/main/webapp/script/template_inbox.xhtml
+++ b/src/main/webapp/script/template_inbox.xhtml
@@ -23,22 +23,13 @@
 
             <style type="text/css">
 
-                .btn-danger {
+                .btn-danger.ui-button, .btn-danger {
                     color: #fff;
                     background-color: #d9534f;
                     border-color: #d43f3a;
                 }
 
-                .btn {
-                    display: inline-block;
-                    padding: 6px 12px;
-                    margin-bottom: 0;
-                    font-size: 14px;
-                    font-weight: 400;
-                    line-height: 1.42857143;
-                    text-align: center;
-                    white-space: nowrap;
-                    vertical-align: middle;
+                .btn.ui-button, btn{
                     cursor: pointer;
                     -webkit-user-select: none;
                     -moz-user-select: none;
