Nueva funcionalidad responder a otro email

--- a/src/main/webapp/script/reglaTrigger/List.xhtml
+++ b/src/main/webapp/script/reglaTrigger/List.xhtml
@@ -87,7 +87,7 @@
                             <h:outputText id="evento" title=""
                                           value="#{item.desccripcion}" escape="false"/>
                         </h:panelGroup>
-                        <pe:tooltip for="nombreDescripcion" value="#{item.toString()}" escape="false"/>
+                        <pe:tooltip for="nombreDescripcion" value="#{item.toString()}" />
                     </p:column>
 
 
